resolved compiler warnings